# imgui-cpp-plugin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: imgui-bootstrap.md  imgui-locate.md  imgui-pin.md  imgui-review.md
docs/superpowers/specs/: 2026-05-07-imgui-cpp-skill-design.md
evals/: evals.json  trigger-eval.json
scripts/: setup-vendor.sh
skills/imgui-cpp-development/: SKILL.md
skills/imgui-cpp-development/assets/: CMakeLists-glfw-opengl3.txt.template  imgui_test_skeleton.cpp.template  main_glfw_opengl3.cpp.template
skills/imgui-cpp-development/references/: bootstrap.md  changelog-1.92.x.md  custom-widgets.md  docking-and-viewports.md  frame-loop.md  id-stack.md  layout-and-sizing.md  locate-imgui.md  lsp-navigation.md  modals-and-popups.md  pitfalls-catalog.md  raii-scope-guards.md  styling-fonts-dpi.md  tables.md  testing.md  widget-recipes.md
skills/imgui-cpp-development/references/backends/: opengl3-glfw.md
skills/imgui-cpp-development/scripts/: check-imgui-version.sh  ensure-compile-commands.sh  imgui-lint.sh  imgui-pair.sh  locate-imgui.sh  refresh-quicknav.py
tests/: CLAUDE.md  README.md  run-prompt.py  run-prompt.sh
tests/01-hello-world-glfw/: CMakeLists.txt  README.md
tests/01-hello-world-glfw/src/: main.cpp
tests/02-tools-panel/: CMakeLists.txt  README.md
tests/02-tools-panel/src/: main.cpp
tests/03-sortable-file-table/: CMakeLists.txt  README.md
tests/03-sortable-file-table/src/: main.cpp
tests/07-docking-editor-layout/: CMakeLists.txt  README.md
tests/08-knob-widget/: CMakeLists.txt  README.md
tests/08-knob-widget/src/: main.cpp
tests/archived/01-hello-world-glfw__20260511T193753Z/: CMakeLists.txt
tests/archived/02-tools-panel__20260511T193837Z/: CMakeLists.txt  README.md  imgui.ini
tests/archived/07-docking-editor-layout__20260511T194214Z/: CMakeLists.txt
tests/archived/07-docking-editor-layout__20260511T194214Z/src/: main.cpp
tests/archived/08-knob-widget__20260511T194346Z/: README.md
tests/archived/08-knob-widget__20260511T194346Z/src/: imknob.hpp
tests/prompts/: 01-hello-world-glfw.md  02-tools-panel.md  03-sortable-file-table.md  04-debug-delete-button.md  05-debug-child-grows.md  06-debug-popup-closes.md  07-docking-editor-layout.md  08-knob-widget.md  README.md
tests/scripts/: pretty-stream.py
tests/transcripts/: .gitignore
